# VST3-Synth-Huntley

./: .gitignore  CMakeLists.txt  README.md  bundleID.h.in
ControllerView/: CMakeLists.txt
ControllerView/include/: Cocoa_UI_Interface.h  Win32ChildHwnd.h  dllmain.h
ControllerView/resource/: View.xib  WKWebView_Test_UI.html  WKWebView_Test_UI.js
ControllerView/source/: Cocoa_UI_Interface.mm  Win32ChildHwnd.cpp  dllmain.cpp
Plugin/: CMakeLists.txt
Plugin/include/: MacWKWebView.h  filter.h  noteExpressionSynthController.h  noteExpressionSynthProcessor.h  noteExpressionSynthVoice.h  panNoteExpressionType.h  releaseTimeModNoteExpressionType.h
Plugin/resource/: Info.plist
Plugin/source/: MacWKWebView.cpp  noteExpressionSynthController.cpp  noteExpressionSynthFactory.cpp  noteExpressionSynthVoice.cpp  panNoteExpressionType.cpp  releaseTimeModNoteExpressionType.cpp
include/: brownnoise.h  noteExpressionSynthController.h  noteExpressionSynthIDs.h  noteExpressionSynthVoice.h  noteExpressionSynthVoice.h~RF10d90397.TMP  noteExpressionSynthVoice.h~RF10df8d5b.TMP  noteExpressionSynthVoice.h~RF10e0e0c6.TMP  noteExpressionSynthVoice.h~RF10e83ca0.TMP  noteExpressionSynthVoice.h~RF10e8a2fb.TMP  noteExpressionSynthVoice.h~RF10e97fed.TMP  noteExpressionSynthVoice.h~RF10ec54c8.TMP  noteExpressionSynthVoice.h~RF110a2ceb.TMP  plugcontroller.h  plugids.h  plugprocessor.h  version.h
source/: noteExpressionSynthController.cpp  noteExpressionSynthController.cpp~RF10f148ba.TMP  noteExpressionSynthFactory.cpp  noteExpressionSynthProcessor.cpp  plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
